--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10482,6 +10482,14 @@ p {
   color: #fff;
 }
 
+#logout {
+  cursor: default;
+}
+
+#logout:hover {
+  background-color: transparent;
+}
+
 /* footer */
 
 footer {
